tests/paczka1/small_fuzzy/65858491.err
Error in line 8: 4Vam1bycUA3 S867 53,8
Error in line 10: ohSZwwFVQZ S867 227,2
